fix overlap at bottom of explore page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,10 @@ h2 {
     background-color: white;
 }
 
+#expl-bottom {
+    margin-bottom: 55px;
+}
+
 
 
 
